Support cs9 images from AWS

--- a/ranch/public/citool-config/guest-setup/pre-artifact-installation/install-epel.yml
+++ b/ranch/public/citool-config/guest-setup/pre-artifact-installation/install-epel.yml
@@ -1,9 +1,9 @@
-- name: Install EPEL on CentOS (expect CentOS Stream 9)
+- name: Install EPEL on CentOS (except CentOS Stream 9)
   package:
     name:
       - epel-release
     state: present
   when:
     - 'ansible_distribution == "CentOS"'
-    - '"centos-stream-9" not in IMAGE_NAME|lower'
+    - 'not IMAGE_NAME|lower|search("centos.stream.9")'
     - '"auto-osbuild" not in IMAGE_NAME|lower'
