--- a/ranch/public/citool-config/playbooks/cloud_image_login.yaml
+++ b/ranch/public/citool-config/playbooks/cloud_image_login.yaml
@@ -12,7 +12,7 @@
   tasks:
   - name: Make sure root can login on CentOS Stream 9
     shell: "sudo sed -i 's/.*ssh-rsa/ssh-rsa/' /root/.ssh/authorized_keys"
-    when: "'centos-stream-9' in IMAGE_NAME|lower"
+    when: "IMAGE_NAME|lower|regex_search('centos.stream.9')"
 
 - hosts: all
   remote_user: centos
@@ -20,7 +20,7 @@
   tasks:
   - name: Make sure root can login on CentOS
     shell: "sudo sed -i 's/.*ssh-rsa/ssh-rsa/' /root/.ssh/authorized_keys"
-    when: "'centos' in IMAGE_NAME|lower and 'centos-stream-9' not in IMAGE_NAME|lower"
+    when: "'centos' in IMAGE_NAME|lower and not IMAGE_NAME|lower|regex_search('centos.stream.9')"
 
 - hosts: all
   remote_user: core
