--- a/ranch/public/citool-config/guest-setup/pre-artifact-installation/enable-powertools.yml
+++ b/ranch/public/citool-config/guest-setup/pre-artifact-installation/enable-powertools.yml
@@ -8,5 +8,5 @@
   when:
     - 'ansible_distribution == "CentOS"'
     - 'ansible_distribution_major_version >= "8"'
-    - '"centos-stream-9" not in IMAGE_NAME|lower'
+    - "not IMAGE_NAME|lower|search('centos.stream.9')"
     - '"auto-osbuild" not in IMAGE_NAME|lower'
