--- a/ranch/public/citool-config/guest-setup/pre-artifact-installation/install-epel.yml
+++ b/ranch/public/citool-config/guest-setup/pre-artifact-installation/install-epel.yml
@@ -5,5 +5,5 @@
     state: present
   when:
     - 'ansible_distribution == "CentOS"'
-    - 'not IMAGE_NAME|lower|search("centos.stream.9")'
+    - 'not IMAGE_NAME|lower|regex_search("centos.stream.9")'
     - '"auto-osbuild" not in IMAGE_NAME|lower'
