Support provisioning redhat ranch workers
Add a new playbook `ansible/playbooks/create-redhat-worker.yml`
to create a new redhat ranch testing farm worker.

Autodetect the slaves from AWS and get rid of static definitions.
For that we had to add:

* support creating different AWS profiles to be able to manage both
  redhat AWS and fedora AWS account
* split aws_ec2 inventory plugins, as now we need both
* use profiles in aws_ec2 inventory plugins instead

Resolves TFT-992

Signed-off-by: Miroslav Vadkerti <mvadkert@redhat.com>

--- a/.envrc
+++ b/.envrc
@@ -52,9 +52,8 @@ PATH_add "$TOOLS_PATH"
 #
 # aws
 #
-export AWS_ACCESS_KEY_ID="$(ansible-vault view --vault-password-file .vault_pass ansible/secrets/credentials.yml | yq -r .credentials.aws.fedora.access_key)"
-export AWS_SECRET_ACCESS_KEY="$(ansible-vault view --vault-password-file .vault_pass ansible/secrets/credentials.yml | yq -r .credentials.aws.fedora.secret_key)"
-export AWS_DEFAULT_REGION="us-east-1"
+export AWS_CONFIG_FILE="$DIRENV_PATH/.aws/config"
+export AWS_SHARED_CREDENTIALS_FILE="$DIRENV_PATH/.aws/credentials"
 
 #
 # kubectl
