--- a/ansible/inventory/hosts.yml
+++ b/ansible/inventory/hosts.yml
@@ -29,7 +29,5 @@ all:
             testing_farm_redhat_server_01:
               ansible_host: testing-farm-server-01.osci.redhat.com
 
+        # Hosts are managed via aws_ec2 inventory
         testing_farm_redhat_workers:
-          hosts:
-            testing_farm_redhat_worker_01:
-              ansible_host: ip-10-29-163-77.us-east-1.aws.redhat.com
