Make sure conversion script is updated always

--- a/ansible/tasks/xunit-viewer.yml
+++ b/ansible/tasks/xunit-viewer.yml
@@ -12,6 +12,7 @@
       url: "https://raw.githubusercontent.com/fedora-ci/jenkins-pipeline-library-agent-image/master/scripts/tfxunit2junit.py"
       dest: "/usr/local/bin/tfxunit2junit.py"
       mode: "a+rwx"
+      force: true
 
   - name: Install testing-farm-viewer
     command: "npm i -g testing-farm-viewer"
