--- a/ranch/redhat/citool-config/state-map.yaml
+++ b/ranch/redhat/citool-config/state-map.yaml
@@ -3,16 +3,27 @@
 # !test-tag: instruction-map
 
 - rule: >
-    FAILURE and FAILURE.exc_info and "Failed to checkout ref" in FAILURE.exc_info[1].message
+    EXISTS('ERROR_MESSAGE')
+    and ERROR_MESSAGE
+    and "Failed to checkout ref" in ERROR_MESSAGE
   state: complete
 
 - rule: >
-    FAILURE and FAILURE.exc_info and "Failed to list plans" in FAILURE.exc_info[1].message
+    EXISTS('ERROR_MESSAGE')
+    and ERROR_MESSAGE
+    and "Failed to list plans" in ERROR_MESSAGE
   state: complete
 
 - rule: >
-    FAILURE and FAILURE.exc_info and "Did not find any plans" in FAILURE.exc_info[1].message
+    EXISTS('ERROR_MESSAGE')
+    and ERROR_MESSAGE
+    and "Did not find any plans" in ERROR_MESSAGE
   state: complete
 
+- rule: >
+    EXISTS('ERROR_MESSAGE')
+    and ERROR_MESSAGE
+    and "Failed to get plan details" in ERROR_MESSAGE
+  state: complete
 
 # Default hard-coded rules apply for the rest - "error" when FAILURE exists, "complete" otherwise
