--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -44,15 +44,23 @@ terraform:
   extends: .direnv
   stage: 🔍
   script:
+    # TODO: tmt run -e cluster_name=testing-farm-gitlab-ci-$CI_COMMIT_REF_NAME plan --name /terraform/environments/dev
     - cd terraform/environments/dev
-    - export TF_VAR_cluster_name=testing-farm-gitlab-ci-$CI_COMMIT_REF_NAME
+    - export TF_VAR_cluster_name=testing-farm-gitlab-ci-$CI_COMMIT_REF_NAME-$CI_JOB_ID
     - terraform init
     - terraform plan
     - terraform apply -auto-approve
-    - aws eks --region us-east-2 update-kubeconfig --name $TF_VAR_cluster_name
+    - context=$(aws eks --region us-east-2 update-kubeconfig --name $TF_VAR_cluster_name | grep -o "arn[^ ]*")
+    - kubectl ctx $context
+    - kubectl ns default
+    - kubectl run fedora --image fedora:35 -- sleep infinity
+    - kubectl wait --for=condition=Ready pod/fedora
+    - kubectl exec pod/fedora -- cat /etc/os-release | grep '^ID=fedora$'
+    - kubectl delete pod/fedora
   after_script:
     - eval "$(direnv export bash)"
     - cd terraform/environments/dev
+    # NOTE: return code can be non-zero in case of warnings
     - terraform destroy -auto-approve
   rules:
     - changes:
