--- a/ranch/redhat/citool-config/guest-setup/pre-artifact-installation/workaround-centos-8.yml
+++ b/ranch/redhat/citool-config/guest-setup/pre-artifact-installation/workaround-centos-8.yml
@@ -10,7 +10,7 @@
     yum_repository:
       name: appstream
       description: AppStream repo
-      baseurl: http://vault.centos.org/$contentdir/$releasever/AppStream/$basearch/os/
+      baseurl: https://vault.centos.org/$contentdir/$releasever/AppStream/$basearch/os/
       state: present
       gpgcheck: yes
       enabled: yes
@@ -21,7 +21,7 @@
     yum_repository:
       name: baseos
       description: BaseOS repo
-      baseurl: http://vault.centos.org/$contentdir/$releasever/BaseOS/$basearch/os/
+      baseurl: https://vault.centos.org/$contentdir/$releasever/BaseOS/$basearch/os/
       state: present
       gpgcheck: yes
       enabled: yes
