--- a/.envrc
+++ b/.envrc
@@ -18,62 +18,36 @@ layout_poetry() {
 #
 # vars
 #
-PROJECT_ROOT=$(pwd)
-DIRENV_PATH="$PROJECT_ROOT/.direnv"
-TOOLS="$DIRENV_PATH/bin"
-LOG="$PROJECT_ROOT/.direnv/envrc.log"
-
-# create tools dir including .direnv early
-mkdir -p $TOOLS
+export PROJECT_ROOT=$(pwd)
+export DIRENV_PATH="$PROJECT_ROOT/.direnv"
+export TOOLS_PATH="$DIRENV_PATH/bin"
 
 #
-# helpers
-#
-info() { echo -e "\e[32m[+] $@\e[0m"; echo "[+] $@" >> $LOG; }
-print_error() { echo -e "\e[31m[E] $@\e[0m"; echo "[E] $@" >> $LOG; }
-error() { print_error $@; exit 1; }
-warn() { echo -e "\e[33m[!] $@\e[0m"; echo "[!] $@" >> $LOG; }
-
-#
-# sanity
-#
-[ -e "$PROJECT_ROOT/.vault_pass" ] || error "Please create '.vault_pass' in project root '$PROJECT_ROOT'"
-
-#
-# setup poetry layout
+# poetry
 #
 layout_poetry
 
 #
-# install all requirements via poetry
+# required
 #
-info "install python deps"
-poetry install &>> $LOG
-
-#
-# setup git goodies
-#
-if ! grep '\[include\]' .git/config &> /dev/null; then
-    info "configure git"
-    git config --local include.path ../.gitconfig &>> $LOG
+if [ ! -e "$PROJECT_ROOT/.vault_pass" ]; then
+    echo -e "\e[31m⛔ Please create '.vault_pass' in project root '$PROJECT_ROOT'"
+    exit 1
 fi
 
 #
-# make sure bin dir exists
+# setup
 #
-PATH_add "$TOOLS"
+if [ ! -e "$DIRENV_PATH" ]; then
+  source setup/environment.sh
+else
+  echo -e "\e[32m💡 Use 'make clean; direnv allow' to reinstall\e[0m"
+fi
 
 #
-# download helm
+# tools
 #
-if [ ! -e "$TOOLS/helm" ]; then
-    info "install helm"
-    TEMPDIR=$(mktemp -d)
-    curl -sLo $TEMPDIR/helm.tar.gz https://get.helm.sh/helm-v3.2.1-linux-amd64.tar.gz
-    tar -xC $TEMPDIR -f $TEMPDIR/helm.tar.gz
-    mv $TEMPDIR/linux-amd64/helm $TOOLS/helm
-    rm -rf $TEMPDIR
-fi
+PATH_add "$TOOLS_PATH"
 
 #
 # download and setup kubectl
@@ -81,52 +55,15 @@ fi
 export AWS_ACCESS_KEY_ID="$(ansible-vault view --vault-password-file .vault_pass secrets/credentials.yml | yq -r .credentials.aws.fedora.access_key)"
 export AWS_SECRET_ACCESS_KEY="$(ansible-vault view --vault-password-file .vault_pass secrets/credentials.yml | yq -r .credentials.aws.fedora.secret_key)"
 export AWS_DEFAULT_REGION="us-east-1"
+
+#
+# kubectl
+#
 export KUBECONFIG="$DIRENV_PATH/.kube/config"
 
-if [ ! -e "$TOOLS/kubectl" ]; then
-
-    info "install kubectl"
-    curl -sLo $TOOLS/kubectl https://amazon-eks.s3.us-west-2.amazonaws.com/1.18.9/2020-11-02/bin/linux/amd64/kubectl
-    chmod +x $TOOLS/kubectl
-
-    # download and install krew
-    export KREW_ROOT=$DIRENV_PATH/.krew/
-    PATH_add $DIRENV_PATH/.krew/bin
-
-    info "installing krew and plugins"
-    TEMPDIR=$(mktemp -d)
-    curl -sLo $TEMPDIR/krew.tar.gz "https://github.com/kubernetes-sigs/krew/releases/latest/download/krew-linux_amd64.tar.gz"
-    curl -sLo $TEMPDIR/krew.yaml "https://github.com/kubernetes-sigs/krew/releases/latest/download/krew.yaml"
-    tar -xC $TEMPDIR -f $TEMPDIR/krew.tar.gz
-    mv $TEMPDIR/krew-linux_amd64 $TOOLS/krew
-    chmod +x $TOOLS/krew
-    krew install ctx &>> $LOG
-    krew install ns &>> $LOG
-    rm -rf $TEMPDIR
-
-    info "AWS credentials"
-
-    mkdir -p $DIRENV_PATH/.kube
-    touch $KUBECONFIG
-
-    info "EKS cluster 'testing-farm'"
-    aws eks update-kubeconfig --name testing-farm &>> $LOG
-fi
-
 #
-# download terraform
+# terraform
 #
-if [ ! -e "${TOOLS}/terraform" ]; then
-    info "install terraform"
-    TEMPDIR=$(mktemp -d)
-    pushd $TEMPDIR &>> $LOG
-    curl -sLo terraform.zip https://releases.hashicorp.com/terraform/1.0.9/terraform_1.0.9_linux_amd64.zip
-    unzip terraform.zip &>> $LOG
-    mv terraform ${TOOLS}/terraform
-    popd &>> $LOG
-    rm -rf $TEMPDIR
-fi
-
 export TF_VAR_cluster_name="testing-farm-dev-$USER"
 
 #
