.envrc: unset VIRTUAL_ENV
If I have a random venv enabled when I enter direnv it
blows up in my face and the random venv is kept.
This fixes the problem for me and the expected poetry
venv works.

I tried to use `deactivate` but it is not around inside
`.envrc` not sure why ...

Signed-off-by: Miroslav Vadkerti <mvadkert@redhat.com>

--- a/.envrc
+++ b/.envrc
@@ -25,6 +25,16 @@ export TOOLS_PATH="$DIRENV_PATH/bin"
 #
 # poetry
 #
+if [ -n "$VIRTUAL_ENV" ]; then
+    # deactivate any old VIRTUALENV before entering direnv
+    # because deactivate is a function created
+    # by activate script, run it again to have it available
+    . $VIRTUAL_ENV/bin/activate
+    deactivate
+    # deactivate messes with PS1, unset it to mitigate weird error
+    # https://github.com/direnv/direnv/wiki/PS1
+    unset PS1
+fi
 layout_poetry
 
 #
