Fix rh-certs task and create repository task
Related to https://pagure.io/fedora-ci/general/issue/300

Signed-off-by: Miroslav Vadkerti <mvadkert@redhat.com>

--- a/ansible/tasks/rh-certs.yml
+++ b/ansible/tasks/rh-certs.yml
@@ -1,5 +1,7 @@
 ---
 - name: Install RH CA Certificates
-  package:
-    name: http://hdn.corp.redhat.com/rhel7-csb-stage/RPMS/noarch/redhat-internal-cert-install-0.1-19.el7.csb.noarch.rpm
+  become: true
+  dnf:
+    name: https://hdn.corp.redhat.com/rhel7-csb-stage/RPMS/noarch/redhat-internal-cert-install-0.1-25.el7.noarch.rpm
     state: present
+    disable_gpg_check: true
