--- a/ranch/public/citool-config/guest-setup/pre-artifact-installation/install-koji-brew.yml
+++ b/ranch/public/citool-config/guest-setup/pre-artifact-installation/install-koji-brew.yml
@@ -3,18 +3,41 @@
     name:
       - koji
     state: present
-  when: 'ansible_distribution == "Fedora"'
+  when:
+  - 'ansible_distribution == "Fedora" or
+     ansible_distribution == "CentOS" or
+     ansible_distribution == "OracleLinux"'
 
 - block:
-    - name: Add RCM Repository
+    - name: Add RCM Repository for RHEL7 and earlier
       yum_repository:
         description: RCMTOOLS repository
         name: rcmtools
         state: present
+        gpgcheck: no
+        baseurl: "http://download.devel.redhat.com/rel-eng/RCMTOOLS/latest-RCMTOOLS-2-RHEL-{{ ansible_distribution_major_version }}/compose/Server/{{ ansible_architecture }}/os/"
+
+    - name: Install Brewkoji
+      package:
+        name: brewkoji
+
+  when:
+    - 'ansible_distribution == "RedHat"'
+    - 'ansible_distribution_major_version <= "7"'
+
+- block:
+    - name: Add RCM Repository for RHEL 8
+      yum_repository:
+        description: RCMTOOLS repository
+        name: rcmtools
+        state: present
+        gpgcheck: no
         baseurl: "http://download.devel.redhat.com/rel-eng/RCMTOOLS/latest-RCMTOOLS-2-RHEL-{{ ansible_distribution_major_version }}/compose/BaseOS/{{ ansible_architecture }}/os/"
 
     - name: Install Brewkoji
       package:
         name: brewkoji
 
-  when: 'ansible_distribution == "RedHat"'
+  when:
+    - 'ansible_distribution == "RedHat"'
+    - 'ansible_distribution_major_version == "8"'
