--- a/ranch/redhat/citool-config/guest-setup/pre-artifact-installation/install-koji-brew.yml
+++ b/ranch/redhat/citool-config/guest-setup/pre-artifact-installation/install-koji-brew.yml
@@ -19,7 +19,9 @@
         name: brewkoji
 
   when:
-    - 'ansible_distribution == "RedHat"'
+    - 'ansible_distribution == "RedHat" or
+       ansible_distribution == "CentOS" or
+       ansible_distribution == "OracleLinux"'
     - 'ansible_distribution_major_version <= "7"'
 
 - block:
@@ -36,7 +38,9 @@
         name: brewkoji
 
   when:
-    - 'ansible_distribution == "RedHat"'
+    - 'ansible_distribution == "RedHat" or
+       ansible_distribution == "CentOS" or
+       ansible_distribution == "OracleLinux"'
     - 'ansible_distribution_major_version == "8"'
 
 - block:
