Fix creating public worker
Well, no security group update needed, the access is permited based on SGs.

Signed-off-by: Miroslav Vadkerti <mvadkert@redhat.com>

--- a/ansible/roles/volume/tasks/main.yml
+++ b/ansible/roles/volume/tasks/main.yml
@@ -48,3 +48,4 @@
         state: directory
         owner: "{{ volume_attached_device_owner }}"
         group: "{{ volume_attached_device_group }}"
+        mode: 0755
