--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -26,7 +26,7 @@ repos:
     rev: v5.3.2
     hooks:
       - id: ansible-lint
-        files: \.(yaml|yml)$
+        files: ^ansible/.*\.(yaml|yml)$
 
   - repo: https://github.com/Yelp/detect-secrets
     rev: v1.1.0
