--- a/ansible/roles/nomad/tasks/main.yml
+++ b/ansible/roles/nomad/tasks/main.yml
@@ -15,6 +15,7 @@
         state: directory
         owner: "{{ nomad_user }}"
         group: "{{ nomad_group }}"
+        mode: 0755
       with_items:
         - "{{ nomad_data_dir }}"
 
