--- a/ranch/public/citool-config/guest-setup/pre-artifact-installation/install-epel.yml
+++ b/ranch/public/citool-config/guest-setup/pre-artifact-installation/install-epel.yml
@@ -1,9 +1,8 @@
-- name: Install EPEL on CentOS (except CentOS Stream 9)
+- name: Install EPEL on CentOS
   package:
     name:
       - epel-release
     state: present
   when:
     - 'ansible_distribution == "CentOS"'
-    - 'not IMAGE_NAME|lower|regex_search("centos.stream.9")'
     - '"auto-osbuild" not in IMAGE_NAME|lower'
