ranch/public/guest-setup: do not install koji for Automotive

--- a/ranch/public/citool-config/guest-setup/pre-artifact-installation/install-koji-brew.yml
+++ b/ranch/public/citool-config/guest-setup/pre-artifact-installation/install-koji-brew.yml
@@ -7,6 +7,8 @@
   - 'ansible_distribution == "Fedora" or
      ansible_distribution == "CentOS" or
      ansible_distribution == "OracleLinux"'
+  # we do not want to install Koji on Automotive images
+  - '"auto-osbuild" not in IMAGE_NAME|lower'
 
 - block:
     - name: Add RCM Repository for RHEL7 and earlier
