direnv: add krew plugins bin path
Without this, the nice `kubectl` plugins will not work

Signed-off-by: Miroslav Vadkerti <mvadkert@redhat.com>

--- a/.envrc
+++ b/.envrc
@@ -59,3 +59,4 @@ export AWS_SHARED_CREDENTIALS_FILE="$DIRENV_PATH/.aws/credentials"
 # kubectl
 #
 export KUBECONFIG="$DIRENV_PATH/.kube/config"
+PATH_add $DIRENV_PATH/.krew/bin
