Workaround for Beaker
This will need more work, these machine have vanilla RHEL, they need
more setup, for now just do not add RHEL buildroot and CRB repo.

Signed-off-by: Miroslav Vadkerti <mvadkert@redhat.com>

--- a/ranch/redhat/citool-config/guest-setup/pre-artifact-installation/enable-buildroot.yml
+++ b/ranch/redhat/citool-config/guest-setup/pre-artifact-installation/enable-buildroot.yml
@@ -4,6 +4,8 @@
 
   - name: Enable Buildroot repository
     command: "dnf config-manager --enable rhel-buildroot"
+    # TODO: this does not work on Beaker, we need better playbooks here
+    ignore_errors: true
 
   when:
     - 'ansible_distribution == "RedHat"'
