--- a/ranch/public/citool-config/guest-setup/post-artifact-installation/install-doggo.yml
+++ b/ranch/public/citool-config/guest-setup/post-artifact-installation/install-doggo.yml
@@ -18,6 +18,6 @@
       register: result_download_doggo
 
     - name: "Start doggo"
-      shell: nohup /usr/local/bin/doggo --pushgateway-url http://pushgateway.dev.testing-farm.io:9091/ --request-id {{ TESTING_FARM_REQUEST_ID }} &
+      shell: nohup /usr/local/bin/doggo --pushgateway-url http://pushgateway.dev.testing-farm.io:9091/ --request-id {{ TESTING_FARM_REQUEST_ID }} &>/var/tmp/doggo.log &
 
   when: ansible_distribution == "Fedora"
