--- a/ranch/public/citool-config/guest-setup/pre-artifact-installation/workaround-beakerlib.yml
+++ b/ranch/public/citool-config/guest-setup/pre-artifact-installation/workaround-beakerlib.yml
@@ -4,7 +4,11 @@
   - name: Make sure dnf core plugins are installed
     command: "dnf -y install dnf-plugins-core"
 
-  - name: Add beakerlib copr repository for CentOS Stream 9
+  - name: Add beakerlib copr repository for CentOS Stream
     command: "dnf -y copr enable packit/beakerlib-beakerlib-master"
 
-  when: "IMAGE_NAME|lower|regex_search('centos.stream.9')"
+  # workaround TFT-1284
+  - name: Install beakerlib
+    command: "dnf -y install beakerlib"
+
+  when: "IMAGE_NAME|lower|regex_search('centos.stream')"
