--- a/ranch/public/citool-config/guest-setup/pre-artifact-installation/update-and-restart.yml
+++ b/ranch/public/citool-config/guest-setup/pre-artifact-installation/update-and-restart.yml
@@ -5,7 +5,7 @@
   register: check_rawhide
 
 - block:
-    - name: Update to latest Fedora packages
+    - name: Update to latest packages
       command: "dnf -y update *"
       register: update_packages
 
@@ -20,6 +20,7 @@
 
       when: "'kernel-' in update_packages.stdout"
 
-  when: check_rawhide.rc == 0
+  # 2022-05-24: Added CentOS Stream 8 update, due to podman broken with old libseccomp
+  when: check_rawhide.rc == 0 or IMAGE_NAME|lower|regex_search('centos.stream.8')
   # This task is best effort
   ignore_errors: true
