ranch/redhat/guest-setup: support RHIVOS builds
The toolchain team wants to test RHIVOS builds on Testing Farm.
These images start with `auto-` string.

Do not run playbooks not related to RHIVOS and port rsync workround
for public ranch.

Signed-off-by: Miroslav Vadkerti <mvadkert@redhat.com>

--- a/ranch/redhat/citool-config/guest-setup/pre-artifact-installation/enable-beaker-tasks.yml
+++ b/ranch/redhat/citool-config/guest-setup/pre-artifact-installation/enable-beaker-tasks.yml
@@ -13,3 +13,4 @@
     baseurl: http://beaker.engineering.redhat.com/rpms/
     gpgcheck: false
     enabled: true
+  when: 'not IMAGE_NAME|lower|regex_search("^auto-")'
