--- a/ranch/redhat/citool-config/guest-setup/pre-artifact-installation/enable-crb.yml
+++ b/ranch/redhat/citool-config/guest-setup/pre-artifact-installation/enable-crb.yml
@@ -3,4 +3,5 @@
   when:
     - 'ansible_distribution == "RedHat"'
     - 'ansible_distribution_major_version >= "8"'
+    - 'not IMAGE_NAME|lower|regex_search("^auto-")'
   ignore_errors: true
