--- a/ranch/redhat/citool-config/guest-setup/pre-artifact-installation/entrypoint.yml
+++ b/ranch/redhat/citool-config/guest-setup/pre-artifact-installation/entrypoint.yml
@@ -4,6 +4,7 @@
   - include_tasks: workaround-beaker-client-repo-unavailable.yml
   - include_tasks: workaround-disable-qa-tools.yml
   - include_tasks: workaround-centos-8.yml
+  - include_tasks: workaround-automotive.yml
   # IT BREAKS PYTHON TEST SUITE, for example, but for RHEL we accept it as it speeds up a lot installability in PSI Openstack
   # Disabled, as we test in AWS now anyway
   # - include_tasks: nosync.yml
