--- a/ranch/redhat/citool-config/guest-setup/pre-artifact-installation/install-koji-brew.yml
+++ b/ranch/redhat/citool-config/guest-setup/pre-artifact-installation/install-koji-brew.yml
@@ -23,6 +23,7 @@
        ansible_distribution == "CentOS" or
        ansible_distribution == "OracleLinux"'
     - 'ansible_distribution_major_version <= "7"'
+    - 'not IMAGE_NAME|lower|regex_search("^auto-")'
 
 - block:
     - name: Add RCM Repository for RHEL8
@@ -42,6 +43,7 @@
        ansible_distribution == "CentOS" or
        ansible_distribution == "OracleLinux"'
     - 'ansible_distribution_major_version == "8"'
+    - 'not IMAGE_NAME|lower|regex_search("^auto-")'
 
 - block:
     - name: Install brewkoji from Fedora 33 for RHEL9 (workaround)
@@ -50,3 +52,4 @@
   when:
     - 'ansible_distribution == "RedHat"'
     - 'ansible_distribution_major_version == "9"'
+    - 'not IMAGE_NAME|lower|regex_search("^auto-")'
