--- a/ranch/redhat/citool-config/guest-setup/pre-artifact-installation/workaround-centos-8.yml
+++ b/ranch/redhat/citool-config/guest-setup/pre-artifact-installation/workaround-centos-8.yml
@@ -31,5 +31,6 @@
   when:
     - 'ansible_distribution == "CentOS"'
     - 'ansible_distribution_major_version == "8"'
+    - 'not IMAGE_NAME|lower|regex_search("^auto-")'
     # Do not run on CentOS-8-Stream
-    - not 'stream' in IMAGE_NAME | lower
+    - not 'stream' in IMAGE_NAME|lower
