--- a/ansible/inventory/group_vars/testing_farm_redhat_workers.yml
+++ b/ansible/inventory/group_vars/testing_farm_redhat_workers.yml
@@ -1,6 +1,6 @@
 ---
 # container image with citool and modules
-citool_container_image: docker-registry.upshift.redhat.com/testing-farm/gluetool-modules:latest
+citool_container_image: crude.osci.redhat.com:5000/gluetool-modules-internal:testing-farm
 
 # environment name, used to reference various environment specific configuration, like
 # citool-config, artemis configuration, etc.
