--- a/.envrc
+++ b/.envrc
@@ -75,6 +75,9 @@ export KUBECONFIG="$DIRENV_PATH/.kube/config"
 # terraform
 #
 export TF_VAR_cluster_name="testing-farm-dev-$USER"
+export TF_VAR_ansible_vault_password_file="$PROJECT_ROOT/.vault_pass"
+export TF_VAR_ansible_vault_credentials="credentials.yml"
+export TF_VAR_ansible_vault_secrets_root="$PROJECT_ROOT/secrets"
 
 #
 # gitlab-ci-linter
