--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -45,11 +45,11 @@ terraform:
   stage: 🔍
   script:
     # TODO: tmt run -e cluster_name=testing-farm-gitlab-ci-$CI_COMMIT_REF_NAME plan --name /terraform/environments/dev
-    - cd terraform/environments/dev
     - export TF_VAR_cluster_name=testing-farm-gitlab-ci-$CI_COMMIT_REF_NAME-$CI_JOB_ID
+    - cd terraform
     - terraform init
-    - terraform plan
-    - terraform apply -auto-approve
+    - terraform plan -var-file=environments/dev/dev.tfvars -out tfplan
+    - terraform apply tfplan
     - context=$(aws eks --region us-east-2 update-kubeconfig --name $TF_VAR_cluster_name | grep -o "arn[^ ]*")
     - kubectl ctx $context
     - kubectl ns default
@@ -59,12 +59,15 @@ terraform:
     - kubectl delete pod/fedora
   after_script:
     - eval "$(direnv export bash)"
-    - cd terraform/environments/dev
+    - export TF_VAR_cluster_name=testing-farm-gitlab-ci-$CI_COMMIT_REF_NAME-$CI_JOB_ID
+    - cd terraform
     # NOTE: return code can be non-zero in case of warnings
-    - terraform destroy -auto-approve
+    - terraform destroy -var-file=environments/dev/dev.tfvars -auto-approve
   rules:
     - changes:
         - secrets/credentials.yml
         - terraform/environments/dev/**/*
         - terraform/modules/**/*
+        - terraform/*.tf
+        - terraform/*.tftpl
         - .envrc
